<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutPrincipal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="mobile.utfpr.com.br.mobileproject.PrincipalActivity">

    <TextView
        android:id="@+id/textViewTituloTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_titulo_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTotalHoras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_totalHoras"
        app:layout_constraintStart_toEndOf="@+id/textViewTituloTotal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTituloTotalBanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_titulo_totalBanco"
        app:layout_constraintStart_toEndOf="@+id/textViewTotalHoras"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTotalBanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_total_banco"
        app:layout_constraintStart_toEndOf="@+id/textViewTituloTotalBanco"
        app:layout_constraintTop_toTopOf="parent" />

    <CalendarView
        android:id="@+id/calendarViewCalendario"
        android:layout_width="wrap_content"
        android:layout_height="321dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloTotalBanco" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="375dp"
        android:layout_height="284dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarViewCalendario">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/ListViewHorasExtras"
                android:layout_width="match_parent"
                android:layout_height="197dp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
