<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAdicionar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mobile.utfpr.com.br.mobileproject.ConfigActivity">

<TextView
        android:id="@+id/textViewData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
        android:text="@string/txt_data"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    tools:layout_editor_absoluteX="20dp" />

    <TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
    android:text="@string/txt_hora"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextHora"
        tools:layout_editor_absoluteX="30dp" />

    <EditText
    android:id="@+id/editTextHora"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
    android:width="60dp"
    android:ems="10"
    android:inputType="number"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textViewData"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
    android:text=":"
    android:textSize="30sp"
    app:layout_constraintStart_toEndOf="@+id/editTextHora"
    app:layout_constraintTop_toBottomOf="@+id/textViewData"
        tools:layout_editor_absoluteX="104dp" />

    <EditText
    android:id="@+id/editTextMinutos"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
    android:width="60dp"
    android:ems="10"
    android:inputType="number"
    app:layout_constraintStart_toEndOf="@+id/textView2"
    app:layout_constraintTop_toBottomOf="@+id/textViewData"
        tools:layout_editor_absoluteX="120dp" />

    <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
    android:text="@string/txt_minutos"
    app:layout_constraintStart_toEndOf="@+id/textView"
    app:layout_constraintTop_toBottomOf="@+id/editTextMinutos"
        tools:layout_editor_absoluteX="119dp" />

    <RadioGroup

    android:id="@+id/RadioGroup"
    android:layout_width="312dp"
    android:layout_height="88dp"
    android:layout_marginTop="70dp"
    app:layout_constraintTop_toBottomOf="@+id/textView3"
    tools:layout_editor_absoluteX="16dp">

    <RadioButton
        android:id="@+id/radioButton50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="50%" />

    <RadioButton
        android:id="@+id/radioButton100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="100%" />
    </RadioGroup>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical" />
</android.support.constraint.ConstraintLayout>
